# shrewnit

./: Cargo.toml  LICENSE  README.md  generate-unit-conversions.nu
examples/: const_operators.rs  custom_dimensions.rs  custom_measure.rs  custom_scalars.rs  custom_unit.rs
src/: dimensions.rs  lib.rs  measures.rs
